Add a disclaimer of warranty.

--- a/README
+++ b/README
@@ -93,3 +93,7 @@ Trainleave Copyright (C) 2023 Aleksandar Kuktin
 This software is licensed to you under the terms of the GNU GENERAL
 PUBLIC LICENSE Version 3, as present in the file COPYING and on the
 World Wide Web at http://www.gnu.org/licenses/ .
+
+This software is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE
