Rename the license file to LICENSE

--- a/README
+++ b/README
@@ -91,7 +91,7 @@ The author can be reached by email at ak@triklod.rs
 Trainleave Copyright (C) 2023 Aleksandar Kuktin
 
 This software is licensed to you under the terms of the GNU GENERAL
-PUBLIC LICENSE Version 3, as present in the file COPYING and on the
+PUBLIC LICENSE Version 3, as present in the file LICENSE and on the
 World Wide Web at http://www.gnu.org/licenses/ .
 
 This software is distributed in the hope that it will be useful,
